--- a/src/components/findCristal1.css
+++ b/src/components/findCristal1.css
@@ -1,5 +1,5 @@
 .findCristalBg{
-    background-image: url('src/assets/bg-planet-1.jpg');
+    background-image: url('/src/assets/bg-planet-1.jpg');
     background-repeat: no-repeat;
     /* background-size: cover; */
     height: 800px;
@@ -9,7 +9,7 @@
 
 .myCristal-toFind{
     background: none;
-    background-image: url('src/assets/crystal-1.png');
+    background-image: url('/src/assets/crystal-1.png');
     background-position: center;
     background-size: cover;
     height: 30px;
