--- a/src/components/findCristal2.css
+++ b/src/components/findCristal2.css
@@ -1,5 +1,5 @@
 .findCristalBg2{
-    background-image: url('./src/assets/bg-planet-2.jpg');
+    background-image: url('/src/assets/bg-planet-2.jpg');
     background-repeat: no-repeat;
     /* background-size: cover; */
     height: 800px;
@@ -9,7 +9,7 @@
 
 .myCristal-toFind2{
     background: none;
-    background-image: url('src/assets/crystal-2.png');
+    background-image: url('/src/assets/crystal-2.png');
     background-position: center;
     background-size: cover;
     height: 30px;
@@ -32,7 +32,7 @@
 }
 
 .myCristal2{
-    background-image: url('src/assets/crystal-2.png');
+    background-image: url('/src/assets/crystal-2.png');
     height: 300px;
     width: 300px;
 }
